--- a/public/css/style-contact.css
+++ b/public/css/style-contact.css
@@ -118,16 +118,15 @@ body {
     display: flex;
     box-sizing: border-box;
     align-self: center;
-    border: #7577cd solid 3px;
+    text-align: center;
     padding: 0.5%;
-    border-radius: 10px;
+    margin: 5px 0;
     font-family: Source Sans Pro, sans-serif;
-    font-size: 28px;
+    font-size: 40px;
 }
 
 .contact-form {
     display: flex;
-    flex: 1;
     box-sizing: border-box;
     flex-direction: column;
     border: #7577cd solid 3px;
@@ -196,6 +195,11 @@ body {
     box-shadow: 0 0 10px 5px #C5C5C5;
 }
 
+.fill {
+    flex: 1;
+    height: 20px;
+}
+
 .footer {
     display: flex;
     justify-content: space-between;
@@ -204,6 +208,7 @@ body {
     background-color: #080957;
     box-shadow: 0px -5px 5px #7577cd;
     padding: 1%;
+    min-height: 120px;
 }
 
 .links {
@@ -216,7 +221,9 @@ body {
 
 .links>a {
     display: flex;
-    padding: 1%;
+    padding: 1.5%;
+    margin: 1px;
+    font-size: 18px;
     border-radius: 5px;
     box-sizing: border-box;
     text-decoration: none;
@@ -269,7 +276,8 @@ body {
     box-sizing: border-box;
     padding: 1%;
     width: 80px;
-    height: auto;
+    height: 80px;
+    align-self: center;
 }
 
 .help>img {
@@ -300,6 +308,15 @@ body {
     .nav-list {
         flex: 1;
     }
+
+    .contact-title {
+        font-size: 32px;
+        margin: 15px 0;
+    }
+
+    .warning {
+        margin: 30px 5px;
+    }
 }
 
 @media only screen and (max-width: 600px) {
@@ -318,19 +335,26 @@ body {
     .adress {
         text-align: center;
     }
+
+    .footer {
+        padding: 2% 1%;
+    }
 }
 
 @media only screen and (max-width: 400px) {
     .help {
-        width: 40px;
+        width: 60px;
+        height: 60px;
     }
 
     .adress {
-        font-size: 16px;
+        font-size: 18px;
     }
 
     .links>a {
-        font-size: 14px;
+        font-size: 16px;
+        padding: 4%;
+        margin: 5px;
     }
 
     .warning {
