--- a/public/css/style-index.css
+++ b/public/css/style-index.css
@@ -117,7 +117,6 @@ body {
     display: flex;
     flex-direction: row;
     box-sizing: border-box;
-    flex: 1;
 }
 
 .presentation-info {
@@ -130,7 +129,7 @@ body {
 
 .presentation-info>p {
     font-family: Roboto, sans-serif;
-    font-size: 26px;
+    font-size: 28px;
     font-weight: lighter;
     display: flex;
     align-self: center;
@@ -157,18 +156,18 @@ body {
     flex-direction: column;
     background-color: #080957;
     padding-bottom: 1%;
+    margin-bottom: 20px;
 }
 
 .projects-title {
     text-align: center;
     box-sizing: border-box;
-    border: #7577cd solid 3px;
     width: fit-content;
     align-self: center;
     padding: 0.5%;
     color: white;
     font-family: Source Sans Pro, sans-serif ;
-    border-radius: 10px;
+    font-size: 40px;
 }
 
 .projects-view {
@@ -255,6 +254,7 @@ body {
 
 .fill {
     height: 20px;
+    flex: 1;
 }
 
 .footer {
@@ -265,6 +265,7 @@ body {
     background-color: #080957;
     box-shadow: 0px -5px 5px #7577cd;
     padding: 1%;
+    min-height: 120px;
 }
 
 .links {
@@ -277,7 +278,9 @@ body {
 
 .links>a {
     display: flex;
-    padding: 1%;
+    padding: 1.5%;
+    margin: 1px;
+    font-size: 18px;
     border-radius: 5px;
     box-sizing: border-box;
     text-decoration: none;
@@ -330,7 +333,8 @@ body {
     box-sizing: border-box;
     padding: 1%;
     width: 80px;
-    height: auto;
+    height: 80px;
+    align-self: center;
 }
 
 .help>img {
@@ -356,6 +360,14 @@ body {
 @media only screen and (max-width: 800px) {
     .presentation {
         flex-direction: column;
+    }
+
+    .presentation-info>p {
+        font-size: 22px;
+    }
+
+    .projects-title {
+        font-size: 32px;
     }
 
     .projects-view {
@@ -399,18 +411,25 @@ body {
     .content-project>p {
         font-size: 18px;
     }
+
+    .footer {
+        padding: 2% 1%;
+    }
 }
 
 @media only screen and (max-width: 400px) {
     .help {
-        width: 40px;
+        width: 60px;
+        height: 60px;
     }
 
     .adress {
-        font-size: 16px;
+        font-size: 18px;
     }
 
     .links>a {
-        font-size: 14px;
+        font-size: 16px;
+        padding: 4%;
+        margin: 5px;
     }
 }
