--- a/public/project/css/style-sound.css
+++ b/public/project/css/style-sound.css
@@ -132,6 +132,7 @@ body {
     color: white;
     font-size: 110px;
     font-family: "Founders Grotesk",Inter,helvetica,arial,sans-serif;
+    text-align: center;
 }
 
 .presentation-subtitle {
@@ -143,6 +144,7 @@ body {
     font-size: 40px;
     font-family: "Founders Grotesk",Inter,helvetica,arial,sans-serif;
     font-weight: bold;
+    text-align: center;
 }
 
 .description {
@@ -212,6 +214,7 @@ body {
     background-color: #080957;
     box-shadow: 0px -5px 5px #7577cd;
     padding: 1%;
+    min-height: 120px;
 }
 
 .links {
@@ -224,7 +227,9 @@ body {
 
 .links>a {
     display: flex;
-    padding: 1%;
+    padding: 1.5%;
+    margin: 1px;
+    font-size: 18px;
     border-radius: 5px;
     box-sizing: border-box;
     text-decoration: none;
@@ -277,7 +282,8 @@ body {
     box-sizing: border-box;
     padding: 1%;
     width: 80px;
-    height: auto;
+    height: 80px;
+    align-self: center;
 }
 
 .help>img {
@@ -366,18 +372,25 @@ body {
     .description-left>.description-info {
         font-size: 16px;
     }
+
+    .footer {
+        padding: 2% 1%;
+    }
 }
 
 @media only screen and (max-width: 400px) {
     .help {
-        width: 40px;
+        width: 60px;
+        height: 60px;
     }
 
     .adress {
-        font-size: 16px;
+        font-size: 18px;
     }
 
     .links>a {
-        font-size: 14px;
+        font-size: 16px;
+        padding: 4%;
+        margin: 5px;
     }
 }
