--- a/public/css/style-help.css
+++ b/public/css/style-help.css
@@ -155,15 +155,25 @@ body {
 }
 
 .answer {
-    display: none;
+    display: flex;
     box-sizing: border-box;
     font-size: 20px;
     font-family: Roboto, sans-serif;
+    max-height: 0px;
+    overflow: hidden;
     width: 100%;
     max-width: 800px;
     padding: 0 1%;
     overflow: hidden;
-    margin-bottom: 5px;
+    transition: all 0.5s ease;
+}
+
+.answer.active {
+    margin-bottom: 20px;
+}
+
+.fa {
+    transition: 0.5s ease;
 }
 
 .answer-content {
@@ -171,6 +181,10 @@ body {
     font-size: 20px;
     font-family: Roboto, sans-serif;
     opacity: 0.8;
+}
+
+.question.active>.fa {
+    transform: rotate(180deg);
 }
 
 .fill {
