--- a/public/en/project/css/style-website.css
+++ b/public/en/project/css/style-website.css
@@ -17,7 +17,6 @@ body {
     box-sizing: border-box;
     background-color: #080957;
     box-shadow: 0px 5px 5px #7577cd;
-    align-items: center;
 }
 
 .logo-area {
@@ -33,7 +32,7 @@ body {
     text-decoration: none;
     margin-left: 3%;
     width: 225px;
-    height: 55px;
+    height: auto;
 }
 
 .logo-large {
@@ -48,72 +47,15 @@ body {
     height: auto;
 }
 
-.select-language {
-    display: flex;
-    flex-direction: column;
-    position: relative;
-    cursor: pointer;
-}
-
-.selected-language {
-    border-radius: 5px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.selected-language i {
-    margin-left: 5px;
-}
-
-.language-list {
-    position: absolute;
-    flex-direction: column;
-    top: 100%;
-    left: 0;
-    display: none;
-    width: 100%;
-    background-color: #080957;
-    border: 1px solid #7577cd;
-}
-
-.language {
-    text-align: center;
-    padding: 3%;
-    cursor: pointer;
-}
-
-.language:hover {
-    background-color: #7577cd;
-}
-
-.fr::before {
-    background-image: url(../img/fr.png);
-    content: '';
-    display: inline-block;
-    width: 30px;
-    height: 20px;
-    vertical-align: middle;
-    margin-right: 10px;
-    background-size: contain;
-    background-repeat: no-repeat;
-}
-
-.en::before {
-    background-image: url(../img/us.png);
-    content: '';
-    display: inline-block;
-    align-self: center;
-    width: 30px;
-    height: 16px;
-    margin-right: 10px;
-    background-size: contain;
-    background-repeat: no-repeat;
-}
-
 .nav {
     display: flex;
     flex-direction: row;
+    box-sizing: border-box;
+    flex: 1;
+}
+
+.blank {
+    display: flex;
     box-sizing: border-box;
     flex: 1;
 }
@@ -123,7 +65,7 @@ body {
     flex-direction: row;
     justify-content: space-around;
     box-sizing: border-box;
-    flex: 3;
+    flex: 1.5;
 }
 
 .nav-hamburger {
@@ -226,145 +168,95 @@ body {
 
 .presentation {
     display: flex;
-    flex-direction: row;
-    box-sizing: border-box;
-}
-
-.presentation-info {
-    display: flex;
     flex-direction: column;
-    box-sizing: border-box;
-    flex: 1;
+    align-items: center;
     justify-content: center;
+    background: linear-gradient(to right, #00000000, #080957) , url("../../img/dev-desk.jpg") center no-repeat;
+    background-size: cover;
+    padding: 5% 0;
+    min-height: 50vh;
 }
 
-.presentation-info>p {
-    font-family: Roboto, sans-serif;
-    font-size: 28px;
+.presentation-title {
     display: flex;
-    align-self: center;
-    text-align: center;
-    padding: 0 2%;
-}
-
-.presentation-picture {
-    display: flex;
-    flex-direction: column;
-    box-sizing: border-box;
-    flex: 1;
-    justify-content: center;
-}
-
-.presentation-picture>img {
-    display: flex;
-    padding: 1%;
-    box-sizing: border-box;
-}
-
-.projects-area {
-    display: flex;
-    flex-direction: column;
-    background-color: #080957;
-    padding-bottom: 1%;
-    margin-bottom: 20px;
-}
-
-.projects-title {
-    text-align: center;
-    box-sizing: border-box;
     width: fit-content;
-    align-self: center;
-    padding: 0.5%;
+    height: fit-content;
+    margin: 0;
     color: white;
-    font-family: Source Sans Pro, sans-serif ;
-    font-size: 40px;
-}
-
-.projects-view {
-    display: flex;
-    flex-direction: row;
-    box-sizing: border-box;
-    justify-content: center;
-    padding: 0 5%;
-    flex: 1;
-}
-
-.project {
-    display: flex;
-    flex-direction: column;
-    box-sizing: border-box;
-    flex: 1;
-    margin: 0 0.5%;
-    border: #7577cd solid 3px;
-    background-color: #3033AD;
-    border-radius: 3px;
-    text-decoration: none;
-}
-
-.project:hover {
-    box-shadow: 0 0 10px 5px #7577cd;
-    transition-duration: 0.3;
-}
-
-.alter {
-    background-image: url("../img/view-modern-office.jpg");
-    background-size: cover;
-    background-position: center;
-}
-
-.sound {
-    background-image: url("../img/recording.jpg");
-    background-size: cover;
-    background-position: center;
-}
-
-.website {
-    background-image: url("../img/dev-desk.jpg");
-    background-size: cover;
-    background-position: center;
-}
-
-.content-project {
-    display: flex;
-    flex: 1;
-    background-color: rgba(41, 41, 78, 0.8);
-}
-
-.content-project>h1 {
-    display: flex;
-    box-sizing: border-box;
-    color: white;
-    font-size: 24px;
-    font-family: Roboto, sans-serif;
-    font-weight: 600;
-    margin: 1%;
-    flex: 1;
-    min-height: 250px;
+    font-size: 110px;
+    font-family: "Founders Grotesk",Inter,helvetica,arial,sans-serif;
     text-align: center;
-    justify-content: center;
-    flex-direction: column;
 }
 
-.project>p {
+.presentation-subtitle {
+    display: flex;
+    width: fit-content;
+    height: fit-content;
+    margin: 0;
+    color: white;
+    font-size: 40px;
+    font-family: "Founders Grotesk",Inter,helvetica,arial,sans-serif;
+    font-weight: bold;
+    text-align: center;
+}
+
+.description {
     display: flex;
     box-sizing: border-box;
-    color: white;
-    font-size: 20px;
-    font-family: Roboto, sans-serif;
-    padding: 2%;
-    text-decoration: none;
-    justify-content: center;
     flex-direction: column;
 }
 
-.project:hover .content-project {
-    background-color: rgba(47, 46, 55, 0.4);
-    transition-duration: 0.3s;
+.description-left, .description-right {
+    display: flex;
+    flex: 1;
+    box-sizing: border-box;
+    flex-direction: row;
+    padding: 2% 4%;
 }
 
-.fill {
-    height: 20px;
+.description-left {
+    background-color: #080957;
+}
+
+.description-left>.description-info {
+    color: white;
+    border: #7577cd dashed 6px;
+}
+
+.description-right>.description-info {
+    border: #080957 dashed 6px;
+}
+
+.description-filler {
+    width: 50px;
+}
+
+.description-picture-area {
+    display: flex;
     flex: 1;
+    box-sizing: border-box;
+    justify-content: center;
+}
+
+.description-picture {
+    display: flex;
+    flex-direction: column;
+    box-sizing: border-box;
+    align-self: center;
+    max-width: 100%;
+    height: auto;
+    border-radius: 10px;
+    flex: 1;
+}
+
+.description-info {
+    flex: 1;
+    display: flex;
+    box-sizing: border-box;
+    padding: 2%;
+    border-radius: 10px;
+    font-family: Source Sans Pro, sans-serif;
+    font-size: 24px;
 }
 
 .footer {
@@ -453,63 +345,11 @@ body {
     height: auto;
 }
 
-.cookie-consent {
-    display: none;
-    flex-direction: row;
-    justify-content: space-between;
-    width: 100%;
-    box-sizing: border-box;
-    align-items: center;
-    padding: 5px 10px;
-    background-color: rgba(117, 119, 205, 0.9);
-    z-index: 1;
-    position: sticky;
-    bottom: 0;
-}
-
-.cookie-consent-info {
-    display: flex;
-    font-family: Roboto, sans-serif;
-    color: black;
-    font-size: 20px;
-}
-
-.cookie-consent-check {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.cookie-consent-check>button {
-    box-sizing: border-box;
-    padding: 8px;
-    font-family: Roboto, sans-serif;
-    color: white;
-    font-size: 20px;
-    margin: 5px;
-    border-radius: 5px;
-    border: none;
-    cursor: pointer;
-}
-
-.cookie-consent-accept {
-    background-color: #08832d;
-}
-
-.cookie-consent-accept:hover {
-    background-color: #17a843;
-}
-
-.cookie-consent-refuse {
-    background-color: #be1313;
-}
-
-.cookie-consent-refuse:hover {
-    background-color: #e42828;
-}
-
-
 @media only screen and (max-width: 1000px) {
+    .logo {
+        width: 250px;
+    }
+
     .nav-list {
         flex: 8;
     }
@@ -520,44 +360,38 @@ body {
 }
 
 @media only screen and (max-width: 800px) {
-    .presentation {
-        flex-direction: column;
-    }
-
-    .presentation-info>p {
-        font-size: 22px;
-    }
-
-    .projects-title {
-        font-size: 32px;
-    }
-
-    .projects-view {
-        flex-direction: column;
+    .blank {
+        flex: none;
     }
 
     .nav-list {
         flex: 1;
     }
-        
-    .project {
-        margin: 1% 0;
+
+    .presentation-title {
+        font-size: 90px;
     }
 
-    .cookie-consent {
+    .presentation-subtitle {
+        font-size: 34px;
+    }
+
+    .description-left {
         flex-direction: column;
-        justify-content: space-between;
     }
 
-    .cookie-consent-info {
-        text-align: center;
+    .description-right {
+        flex-direction: column-reverse;
+    }
+
+    .description-left>.description-info, .description-right>.description-info {
+        border: none;
     }
 }
 
 @media only screen and (max-width: 600px) {
     .header {
         flex-direction: column;
-        align-items: unset;
     }
 
     .logo-large {
@@ -581,7 +415,7 @@ body {
     }
 
     .logo {
-        max-width: 55px;
+        max-width: 80px;
     }
 
     .sticky + .content {
@@ -596,12 +430,24 @@ body {
         text-align: center;
     }
 
-    .content-project>h1 {
-        font-size: 18px;
+    .presentation {
+        padding: 10% 0;
     }
 
-    .content-project>p {
-        font-size: 18px;
+    .presentation-title {
+        font-size: 50px;
+    }
+
+    .presentation-subtitle {
+        font-size: 24px;
+    }
+
+    .description-right>.description-info {
+        font-size: 16px;
+    }
+
+    .description-left>.description-info {
+        font-size: 16px;
     }
 
     .footer {
