--- a/public/en/css/style-profil.css
+++ b/public/en/css/style-profil.css
@@ -17,7 +17,6 @@ body {
     box-sizing: border-box;
     background-color: #080957;
     box-shadow: 0px 5px 5px #7577cd;
-    align-items: center;
 }
 
 .logo-area {
@@ -33,7 +32,7 @@ body {
     text-decoration: none;
     margin-left: 3%;
     width: 225px;
-    height: 55px;
+    height: auto;
 }
 
 .logo-large {
@@ -48,72 +47,15 @@ body {
     height: auto;
 }
 
-.select-language {
-    display: flex;
-    flex-direction: column;
-    position: relative;
-    cursor: pointer;
-}
-
-.selected-language {
-    border-radius: 5px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.selected-language i {
-    margin-left: 5px;
-}
-
-.language-list {
-    position: absolute;
-    flex-direction: column;
-    top: 100%;
-    left: 0;
-    display: none;
-    width: 100%;
-    background-color: #080957;
-    border: 1px solid #7577cd;
-}
-
-.language {
-    text-align: center;
-    padding: 3%;
-    cursor: pointer;
-}
-
-.language:hover {
-    background-color: #7577cd;
-}
-
-.fr::before {
-    background-image: url(../img/fr.png);
-    content: '';
-    display: inline-block;
-    width: 30px;
-    height: 20px;
-    vertical-align: middle;
-    margin-right: 10px;
-    background-size: contain;
-    background-repeat: no-repeat;
-}
-
-.en::before {
-    background-image: url(../img/us.png);
-    content: '';
-    display: inline-block;
-    align-self: center;
-    width: 30px;
-    height: 16px;
-    margin-right: 10px;
-    background-size: contain;
-    background-repeat: no-repeat;
-}
-
 .nav {
     display: flex;
     flex-direction: row;
+    box-sizing: border-box;
+    flex: 1;
+}
+
+.blank {
+    display: flex;
     box-sizing: border-box;
     flex: 1;
 }
@@ -123,7 +65,7 @@ body {
     flex-direction: row;
     justify-content: space-around;
     box-sizing: border-box;
-    flex: 3;
+    flex: 1.5;
 }
 
 .nav-hamburger {
@@ -214,6 +156,11 @@ body {
     box-sizing: border-box;
 }
 
+.fill {
+    display: flex;
+    flex: 1;
+}
+
 .sticky {
     position: fixed;
     top: 0;
@@ -227,6 +174,21 @@ body {
 .presentation {
     display: flex;
     flex-direction: row;
+    box-sizing: border-box;
+    flex: 1;
+}
+
+.presentation-picture {
+    display: flex;
+    flex-direction: column;
+    box-sizing: border-box;
+    flex: 1;
+    justify-content: center;
+}
+
+.presentation-picture>img {
+    display: flex;
+    padding: 1%;
     box-sizing: border-box;
 }
 
@@ -247,124 +209,209 @@ body {
     padding: 0 2%;
 }
 
-.presentation-picture {
+.skills-area {
     display: flex;
     flex-direction: column;
     box-sizing: border-box;
+    justify-content: space-around;
     flex: 1;
-    justify-content: center;
-}
-
-.presentation-picture>img {
-    display: flex;
-    padding: 1%;
-    box-sizing: border-box;
-}
-
-.projects-area {
-    display: flex;
-    flex-direction: column;
     background-color: #080957;
-    padding-bottom: 1%;
-    margin-bottom: 20px;
+    padding: 1%;
 }
 
-.projects-title {
-    text-align: center;
-    box-sizing: border-box;
-    width: fit-content;
-    align-self: center;
-    padding: 0.5%;
+.skills-title {
     color: white;
-    font-family: Source Sans Pro, sans-serif ;
+    font-family: Source Sans Pro, sans-serif;
     font-size: 40px;
+    width: fit-content;
+    padding: 0.5%;
+    align-self: center;
 }
 
-.projects-view {
+.skills {
     display: flex;
     flex-direction: row;
     box-sizing: border-box;
-    justify-content: center;
-    padding: 0 5%;
     flex: 1;
-}
-
-.project {
-    display: flex;
-    flex-direction: column;
-    box-sizing: border-box;
-    flex: 1;
-    margin: 0 0.5%;
-    border: #7577cd solid 3px;
-    background-color: #3033AD;
     border-radius: 3px;
-    text-decoration: none;
+    flex-wrap: wrap;
 }
 
-.project:hover {
-    box-shadow: 0 0 10px 5px #7577cd;
-    transition-duration: 0.3;
-}
-
-.alter {
-    background-image: url("../img/view-modern-office.jpg");
-    background-size: cover;
-    background-position: center;
-}
-
-.sound {
-    background-image: url("../img/recording.jpg");
-    background-size: cover;
-    background-position: center;
-}
-
-.website {
-    background-image: url("../img/dev-desk.jpg");
-    background-size: cover;
-    background-position: center;
-}
-
-.content-project {
+.skills>* {
     display: flex;
-    flex: 1;
-    background-color: rgba(41, 41, 78, 0.8);
-}
-
-.content-project>h1 {
-    display: flex;
-    box-sizing: border-box;
-    color: white;
-    font-size: 24px;
-    font-family: Roboto, sans-serif;
-    font-weight: 600;
-    margin: 1%;
-    flex: 1;
-    min-height: 250px;
-    text-align: center;
-    justify-content: center;
     flex-direction: column;
+    box-sizing: border-box;
+    flex: 1;
+    padding: 0.5%;
+    flex-basis: 33%;
+    margin-bottom: 2%;
 }
 
-.project>p {
-    display: flex;
+.skills>*>h1 {
+    color: white;
+    font-family: Source Sans Pro, sans-serif;
+    font-size: 28px;
+    box-sizing: border-box;
+    border-radius: 3px;
+    width: fit-content;
+    padding: 0.5%;
+}
+
+.skills>*>ul {
     box-sizing: border-box;
     color: white;
-    font-size: 20px;
-    font-family: Roboto, sans-serif;
+    font-family: Source Sans Pro, sans-serif;
+    font-size: 22px;
+}
+
+.skills-left, .skills-middle {
+    border-right: solid #7577cd 3px;
+}
+
+.experience {
+    display: flex;
+    flex-direction: column;
+    box-sizing: border-box;
+    flex: 1;
+}
+
+.experience-title {
+    color: black;
+    font-family: Source Sans Pro, sans-serif;
+    width: fit-content;
+    font-size: 40px;
+    padding: 0.5%;
+    align-self: center;
+}
+
+.experience-left, .experience-right {
+    display: flex;
+    flex: 1;
+    box-sizing: border-box;
+    flex-direction: row;
+    min-height: 500px;
+}
+
+.experience-left>.experience-picture-area {
+    border-radius: 0 100% 100% 0/0 70% 70% 0;
+    padding: 4% 2% 4% 0;
+}
+
+.experience-left>.experience-picture-area>.experience-picture {
+    border-radius: 0 100% 100% 0/0 70% 70% 0;
+}
+
+.experience-left>.experience-picture-area:hover {
+    margin-right: 2%;
+}
+
+.experience-right>.experience-picture-area {
+    border-radius: 100% 0 0 100%/70% 0 0 70%;
+    padding: 4% 0 4% 2%;
+}
+
+.experience-right>.experience-picture-area>.experience-picture {
+    border-radius: 100% 0 0 100%/70% 0 0 70%;
+}
+
+.experience-right>.experience-picture-area:hover {
+    margin-left: 2%;
+}
+
+.experience-picture-area {
+    display: flex;
+    flex: 2;
+    box-sizing: border-box;
+    background-color: #080957;
+    transition: 0.5s;
+}
+
+.experience-picture-area:hover {
+    padding: 0;
+}
+
+.experience-picture {
+    display: flex;
+    flex: 1;
+    box-sizing: border-box;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.experience-picture.lycee {
+    background-image: url(../img/lycee.jpg);
+}
+
+.experience-picture.iut {
+    background-image: url(../img/iut.jpg);
+}
+
+.experience-info {
+    flex: 5;
+    display: flex;
+    box-sizing: border-box;
+    background-color: white;
+    box-shadow: 0 0 10px 5px #C5C5C5;
+    margin: 5% 3%;
     padding: 2%;
-    text-decoration: none;
-    justify-content: center;
+    border-radius: 10px;
+    font-family: Source Sans Pro, sans-serif;
+    font-size: 24px;
+}
+
+.experience-info:hover {
+    background-color: #DEDEDE;
+    transition: 0.3s;
+}
+
+.downloadable {
+    display: flex;
     flex-direction: column;
-}
-
-.project:hover .content-project {
-    background-color: rgba(47, 46, 55, 0.4);
-    transition-duration: 0.3s;
-}
-
-.fill {
-    height: 20px;
+    box-sizing: border-box;
     flex: 1;
+    padding: 2%;
+}
+
+.downloadable-title {
+    display: flex;
+    color: black;
+    font-family: Source Sans Pro, sans-serif;
+    width: fit-content;
+    font-size: 40px;
+    padding: 0.5%;
+    align-self: center;
+    text-align: center;
+}
+
+.downloadable-picture {
+    display: flex;
+    max-width: 800px;
+    width: 100%;
+    height: auto;
+    box-sizing: border-box;
+    padding: 1%;
+    align-self: center;
+}
+
+.download {
+    display: flex;
+    padding: 1%;
+    border-radius: 10px;
+    box-sizing: border-box;
+    text-decoration: none;
+    font-family: Century Gothic;
+    font-weight: bold;
+    font-size: 28px;
+    color: white;
+    background-color: #080957;
+    align-self: center;
+    width: fit-content;
+}
+
+.download:hover {
+    background-color: #0D0F80;
+    transition: 0.3s;
 }
 
 .footer {
@@ -453,63 +500,11 @@ body {
     height: auto;
 }
 
-.cookie-consent {
-    display: none;
-    flex-direction: row;
-    justify-content: space-between;
-    width: 100%;
-    box-sizing: border-box;
-    align-items: center;
-    padding: 5px 10px;
-    background-color: rgba(117, 119, 205, 0.9);
-    z-index: 1;
-    position: sticky;
-    bottom: 0;
-}
-
-.cookie-consent-info {
-    display: flex;
-    font-family: Roboto, sans-serif;
-    color: black;
-    font-size: 20px;
-}
-
-.cookie-consent-check {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.cookie-consent-check>button {
-    box-sizing: border-box;
-    padding: 8px;
-    font-family: Roboto, sans-serif;
-    color: white;
-    font-size: 20px;
-    margin: 5px;
-    border-radius: 5px;
-    border: none;
-    cursor: pointer;
-}
-
-.cookie-consent-accept {
-    background-color: #08832d;
-}
-
-.cookie-consent-accept:hover {
-    background-color: #17a843;
-}
-
-.cookie-consent-refuse {
-    background-color: #be1313;
-}
-
-.cookie-consent-refuse:hover {
-    background-color: #e42828;
-}
-
-
 @media only screen and (max-width: 1000px) {
+    .logo {
+        width: 250px;
+    }
+
     .nav-list {
         flex: 8;
     }
@@ -524,40 +519,74 @@ body {
         flex-direction: column;
     }
 
-    .presentation-info>p {
-        font-size: 22px;
+    .experience-left {
+        flex-direction: column;
     }
 
-    .projects-title {
+    .experience-right {
+        flex-direction: column-reverse;
+    }
+
+    .experience-picture-area {
+        min-height: 200px;
+    }
+
+    .experience-left>.experience-picture-area>.experience-picture, .experience-right>.experience-picture-area>.experience-picture {
+        border-radius: 0;
+    }
+
+    .experience-left>.experience-picture-area, .experience-right>.experience-picture-area {
+        border-radius: 0;
+    }
+
+    .experience-left>.experience-picture-area {
+        padding-right: 0;
+    }
+
+    .experience-left>.experience-picture-area:hover {
+        margin: 0;
+    }
+
+    .experience-right>.experience-picture-area {
+        padding-left: 0;
+    }
+
+    .experience-right>.experience-picture-area:hover {
+        margin: 0;
+    }
+
+    .experience-info {
+        flex: 2;
+    }
+
+    .skills-title, .experience-title, .downloadable-title {
         font-size: 32px;
     }
 
-    .projects-view {
+    .skills {
         flex-direction: column;
+    }
+
+    .skills-left, .skills-middle {
+        border-right: solid #7577cd 0px;
+    }
+
+    .downloadable,.download {
+        padding: 4%;
+    }
+
+    .blank {
+        flex: none;
     }
 
     .nav-list {
         flex: 1;
-    }
-        
-    .project {
-        margin: 1% 0;
-    }
-
-    .cookie-consent {
-        flex-direction: column;
-        justify-content: space-between;
-    }
-
-    .cookie-consent-info {
-        text-align: center;
     }
 }
 
 @media only screen and (max-width: 600px) {
     .header {
         flex-direction: column;
-        align-items: unset;
     }
 
     .logo-large {
@@ -581,7 +610,7 @@ body {
     }
 
     .logo {
-        max-width: 55px;
+        max-width: 80px;
     }
 
     .sticky + .content {
@@ -594,14 +623,6 @@ body {
 
     .adress {
         text-align: center;
-    }
-
-    .content-project>h1 {
-        font-size: 18px;
-    }
-
-    .content-project>p {
-        font-size: 18px;
     }
 
     .footer {
@@ -623,5 +644,13 @@ body {
         font-size: 16px;
         padding: 4%;
         margin: 5px;
+    }
+
+    .experience-info {
+        font-size: 20px;
+    }
+
+    .download {
+        font-size: 22px;
     }
 }
