--- a/public/en/css/style-projets.css
+++ b/public/en/css/style-projets.css
@@ -17,7 +17,6 @@ body {
     box-sizing: border-box;
     background-color: #080957;
     box-shadow: 0px 5px 5px #7577cd;
-    align-items: center;
 }
 
 .logo-area {
@@ -33,7 +32,7 @@ body {
     text-decoration: none;
     margin-left: 3%;
     width: 225px;
-    height: 55px;
+    height: auto;
 }
 
 .logo-large {
@@ -48,72 +47,15 @@ body {
     height: auto;
 }
 
-.select-language {
-    display: flex;
-    flex-direction: column;
-    position: relative;
-    cursor: pointer;
-}
-
-.selected-language {
-    border-radius: 5px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.selected-language i {
-    margin-left: 5px;
-}
-
-.language-list {
-    position: absolute;
-    flex-direction: column;
-    top: 100%;
-    left: 0;
-    display: none;
-    width: 100%;
-    background-color: #080957;
-    border: 1px solid #7577cd;
-}
-
-.language {
-    text-align: center;
-    padding: 3%;
-    cursor: pointer;
-}
-
-.language:hover {
-    background-color: #7577cd;
-}
-
-.fr::before {
-    background-image: url(../img/fr.png);
-    content: '';
-    display: inline-block;
-    width: 30px;
-    height: 20px;
-    vertical-align: middle;
-    margin-right: 10px;
-    background-size: contain;
-    background-repeat: no-repeat;
-}
-
-.en::before {
-    background-image: url(../img/us.png);
-    content: '';
-    display: inline-block;
-    align-self: center;
-    width: 30px;
-    height: 16px;
-    margin-right: 10px;
-    background-size: contain;
-    background-repeat: no-repeat;
-}
-
 .nav {
     display: flex;
     flex-direction: row;
+    box-sizing: border-box;
+    flex: 1;
+}
+
+.blank {
+    display: flex;
     box-sizing: border-box;
     flex: 1;
 }
@@ -123,7 +65,7 @@ body {
     flex-direction: row;
     justify-content: space-around;
     box-sizing: border-box;
-    flex: 3;
+    flex: 1.5;
 }
 
 .nav-hamburger {
@@ -214,6 +156,11 @@ body {
     box-sizing: border-box;
 }
 
+.fill {
+    display: flex;
+    flex: 1;
+}
+
 .sticky {
     position: fixed;
     top: 0;
@@ -224,49 +171,11 @@ body {
     padding-top: 50px;
 }
 
-.presentation {
-    display: flex;
-    flex-direction: row;
-    box-sizing: border-box;
-}
-
-.presentation-info {
-    display: flex;
-    flex-direction: column;
-    box-sizing: border-box;
-    flex: 1;
-    justify-content: center;
-}
-
-.presentation-info>p {
-    font-family: Roboto, sans-serif;
-    font-size: 28px;
-    display: flex;
-    align-self: center;
-    text-align: center;
-    padding: 0 2%;
-}
-
-.presentation-picture {
-    display: flex;
-    flex-direction: column;
-    box-sizing: border-box;
-    flex: 1;
-    justify-content: center;
-}
-
-.presentation-picture>img {
-    display: flex;
-    padding: 1%;
-    box-sizing: border-box;
-}
-
 .projects-area {
     display: flex;
     flex-direction: column;
     background-color: #080957;
     padding-bottom: 1%;
-    margin-bottom: 20px;
 }
 
 .projects-title {
@@ -362,8 +271,31 @@ body {
     transition-duration: 0.3s;
 }
 
-.fill {
-    height: 20px;
+.old-projects-area {
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    padding-bottom: 1%;
+    flex: 1;
+}
+
+.old-projects-title {
+    text-align: center;
+    box-sizing: border-box;
+    width: fit-content;
+    align-self: center;
+    padding: 0.5%;
+    color: black;
+    font-family: Source Sans Pro, sans-serif ;
+    font-size: 40px;
+}
+
+.old-projects-view {
+    display: flex;
+    flex-direction: row;
+    box-sizing: border-box;
+    justify-content: center;
+    padding: 0 5%;
     flex: 1;
 }
 
@@ -453,63 +385,11 @@ body {
     height: auto;
 }
 
-.cookie-consent {
-    display: none;
-    flex-direction: row;
-    justify-content: space-between;
-    width: 100%;
-    box-sizing: border-box;
-    align-items: center;
-    padding: 5px 10px;
-    background-color: rgba(117, 119, 205, 0.9);
-    z-index: 1;
-    position: sticky;
-    bottom: 0;
-}
-
-.cookie-consent-info {
-    display: flex;
-    font-family: Roboto, sans-serif;
-    color: black;
-    font-size: 20px;
-}
-
-.cookie-consent-check {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.cookie-consent-check>button {
-    box-sizing: border-box;
-    padding: 8px;
-    font-family: Roboto, sans-serif;
-    color: white;
-    font-size: 20px;
-    margin: 5px;
-    border-radius: 5px;
-    border: none;
-    cursor: pointer;
-}
-
-.cookie-consent-accept {
-    background-color: #08832d;
-}
-
-.cookie-consent-accept:hover {
-    background-color: #17a843;
-}
-
-.cookie-consent-refuse {
-    background-color: #be1313;
-}
-
-.cookie-consent-refuse:hover {
-    background-color: #e42828;
-}
-
-
 @media only screen and (max-width: 1000px) {
+    .logo {
+        width: 250px;
+    }
+
     .nav-list {
         flex: 8;
     }
@@ -520,44 +400,30 @@ body {
 }
 
 @media only screen and (max-width: 800px) {
-    .presentation {
-        flex-direction: column;
+    .blank {
+        flex: none;
     }
 
-    .presentation-info>p {
-        font-size: 22px;
-    }
-
-    .projects-title {
-        font-size: 32px;
+    .nav-list {
+        flex: 1;
     }
 
     .projects-view {
         flex-direction: column;
     }
 
-    .nav-list {
-        flex: 1;
-    }
-        
     .project {
         margin: 1% 0;
     }
 
-    .cookie-consent {
-        flex-direction: column;
-        justify-content: space-between;
-    }
-
-    .cookie-consent-info {
-        text-align: center;
+    .projects-title, .old-projects-title {
+        font-size: 32px;
     }
 }
 
 @media only screen and (max-width: 600px) {
     .header {
         flex-direction: column;
-        align-items: unset;
     }
 
     .logo-large {
@@ -581,7 +447,7 @@ body {
     }
 
     .logo {
-        max-width: 55px;
+        max-width: 80px;
     }
 
     .sticky + .content {
